2006-08-21  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Checkpoint.py (__init__): Assign dbstate.

2006-08-21  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels/_PeopleModel.py: fix handle column after removal
	of cause of death
	* src/GrampsDb/_WriteGedcom.py: handle custome events for people (bug
	# 368)

2006-08-20  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_PersonView.py (column_names): Remove cause of death.
	* src/DisplayModels/_PeopleModel.py (__init__): Update the order
	of marker and tooltip columns;
	(column_cause_of_death): remove method;
	(COLUMN_DEFS): Remove 'cause of death' column.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_10): Reset event
	and person view columns to the default.
	* src/GrampsDb/_GrampsDbBase.py (get_event_column_order): Remove
	cause column from the default list.
	(get_person_column_order): Remove cause of death column.

	* src/GrampsDb/_ReadGedcom.py (GedcomParser.__init__): Use config
	setting to determine whether to set default source.
	* src/Config/_GrampsConfigKeys.py: Regenerate file.
	* src/GrampsCfg.py (add_behavior_panel): Use new key.
	* data/gramps.schemas.in: Add default-source key.

2006-08-20  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix CHAN parsing for family

2006-08-20  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/EventCmp.py: improve Date/Place display (#0000226)

2006-08-20  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_EventView.py (column_names): Remove cause column.
	* src/DisplayModels/_EventModel.py: Use constants for column
	numbers; remove cause column.	

2006-08-20  Brian Matherly  <brian@gramps-project.org>
	* src/Config/_GrampsIniKeys.py: Report error on invalid filename
	* src/const.py.in: detect windows home directory before others
	* src/plugins/ChangeTypes.py: alphabetize the event list (#0000365)

2006-08-19  Alex Roitman  <shura@gramps-project.org>