@@ -6,6 +6,7 @@
 	of cause of death
 	* src/GrampsDb/_WriteGedcom.py: handle custome events for people (bug
 	# 368)
+	* src/GrampsDb/_ReadGedcom.py: handle inline repositories better
 
 2006-08-20  Alex Roitman  <shura@gramps-project.org>
 	* src/DataViews/_PersonView.py (column_names): Remove cause of death.
